DP-9307 fix Org filter close on mouse scrollbar interaction / various fixes & cleanup in HeaderSearch components/stories (#242)
* DP-9307 various fixes/cleanup in HeaderSearch components/stories

Fixed width of Organization dropdown where there are very long org names

* DP-9307 add Org list items to force scrolling/fix close on mouse scrollbar interaction

--- a/src/components/molecules/HeaderSearch/HeaderSearch.scss
+++ b/src/components/molecules/HeaderSearch/HeaderSearch.scss
@@ -1,6 +1,7 @@
 .ma__header-search {
   &__wrapper{
-  	display: flex;
+    display: flex;
+    position: relative;
   }
   .ma__form {
     display: flex;
